@@ -1,20 +1,20 @@
 plugins {
     application
-    kotlin("jvm") version "1.3.40"
-    id("com.google.cloud.tools.jib") version "1.0.0"
+    kotlin("jvm") version "1.3.50"
+    id("com.google.cloud.tools.jib") version "1.6.1"
 }
 
 group = "ktor01"
 version = "1.0-SNAPSHOT"
 
 
-val ktor_version by extra("1.1.2")
-val logback_version by extra("1.2.3")
+val ktorVersion by extra("1.2.5")
+val logbackVersion by extra("1.2.3")
 
-val main_class by extra("io.ktor.server.netty.EngineMain")
+val mainClass by extra("io.ktor.server.netty.EngineMain")
 
 application {
-    mainClassName = main_class
+    mainClassName = mainClass
 
     applicationDefaultJvmArgs = listOf(
             "-server",
@@ -26,38 +26,27 @@ application {
     )
 }
 
-java.sourceCompatibility = JavaVersion.VERSION_1_8
+java.sourceCompatibility = JavaVersion.VERSION_12
 
 dependencies {
     implementation(kotlin("stdlib"))
 
-    implementation("ch.qos.logback:logback-classic:$logback_version")
+    implementation("ch.qos.logback:logback-classic:$logbackVersion")
 
-    implementation("io.ktor:ktor-server-core:$ktor_version")
-    implementation("io.ktor:ktor-server-netty:$ktor_version")
-    implementation("io.ktor:ktor-metrics:$ktor_version")
-    implementation("io.ktor:ktor-html-builder:$ktor_version")
-    testCompile ("io.ktor:ktor-server-test-host:$ktor_version")
+    implementation("io.ktor:ktor-server-core:$ktorVersion")
+    implementation("io.ktor:ktor-server-netty:$ktorVersion")
+    implementation("io.ktor:ktor-metrics:$ktorVersion")
+    implementation("io.ktor:ktor-html-builder:$ktorVersion")
+    testCompile ("io.ktor:ktor-server-test-host:$ktorVersion")
 }
 
 jib {
+    from {
+        image = "openjdk:12"
+    }
     container {
         ports = listOf("8080")
-        mainClass = main_class
-
-        // good defauls intended for Java 8 containers
-        jvmFlags = listOf(
-                "-server",
-                "-Djava.awt.headless=true",
-                "-XX:+UnlockExperimentalVMOptions",
-                "-XX:+UseCGroupMemoryLimitForHeap",
-                "-XX:InitialRAMFraction=2",
-                "-XX:MinRAMFraction=2",
-                "-XX:MaxRAMFraction=2",
-                "-XX:+UseG1GC",
-                "-XX:MaxGCPauseMillis=100",
-                "-XX:+UseStringDeduplication"
-        )
+        mainClass = this@Build_gradle.mainClass
     }
 }
 
